🐛 Fixed responsiveness on mobile design

--- a/Newbie/FAQ-accordion-card/styles.css
+++ b/Newbie/FAQ-accordion-card/styles.css
@@ -159,7 +159,6 @@ label::after {
   body {
     justify-content: flex-end;
     margin: 0;
-    height: 100%;
     width: 100%;
   }
   .container {
@@ -170,12 +169,12 @@ label::after {
     width: 85%;
     min-height: 77%;
     margin-bottom: 5%;
-    height: fit-content;
   }
   .images {
     width: 100%;
-    height: 30%;
+    height: 20%;
     overflow: visible;
+    position: unset;
   }
   .shadow-mb {
     display: flex;
@@ -188,11 +187,11 @@ label::after {
     display: flex;
     position: absolute;
     width: 90%;
-    top: -95%;
+    top: -12%;
   }
   .faq {
     width: 90%;
-    min-height: 80%;
+    min-height: unset;
     align-items: center;
     justify-content: center;
     padding-left: 0%;
@@ -206,6 +205,7 @@ label::after {
   .questions {
     margin-left: 5%;
     width: 93%;
+    padding-bottom: 5%;
   }
   .question {
     margin-bottom: 7%;
